app/assets/stylesheets/layout.scss
// Table of Contents
//
// 01. Global styles
// 02. Header
// 03. Footer
// 04. Tags
// 05. Auth pages
// 06. Forms
// 07. Callout
// 08. User account
// 09. Search
// 10. Official levels
// 11. Tables
// 12. Social
// 13. Pages
// 14. Verification
// 15. Comments
// 16. Flags
// 17. Activity
// 18. Banners
//

// 01. Global styles
// -----------------

::selection {
  color: white;
  background-color: $brand;
}

body {
  font-size: $base-font-size;
}

h1, h2, h3, h4, h5, h6 {
  clear: both;
  font-weight: 700;
}

p {
  font-size: $base-font-size;
  font-weight: 400;
  line-height: $base-line;
}

a {
  color: $link;

  &:hover, &:active {
    color: $link-hover;
    text-decoration: underline;

    h1, h2, h3, h4, h5, h6 {
      color: $link-hover;
    }
  }

  &:focus {
    color: $link-hover;
    outline: 3px solid #ffbf47;
  }
}

.button {
  background: $brand;
  font-size: $base-font-size;

  &:hover {
    text-decoration: none !important;
  }
}

.button.hollow {
  border: 1px solid $link;
  color: $link;
}

.postfix.button {
  padding: 0;
}

.clear {
  clear: both;
}

.inline {
  display: inline !important;
}

.inline-block {
  display: inline-block;
}

.sidebar-divider {
  border-top: 1px solid $border;
  margin-top: $line-height;

  &:first-child {
    margin-top: 0;
  }
}

.f-dropdown {
  li a {
    font-size: $small-font-size;

    &:hover {
      color: $link-hover;
    }
  }

  li:hover, .f-dropdown li:focus {
    background: white;
  }

  &.open {
    outline: none;
  }
}

.margin {
  margin-bottom: $line-height;
  margin-top: $line-height;
}

.margin-top {
  margin-top: $line-height;
}

.margin-bottom {
  margin-bottom: $line-height;
}

.margin-right {
  margin-right: $line-height;
}

.no-margin-top {
  margin-top: rem-calc(-24);
}

.padding {
  padding-bottom: $line-height;
  padding-top: $line-height;
}

.light {
  background: $light;
}

.highlight {
  background: $highlight;
}

.icon-check {
  color: $check;
}

.wrapper {
  min-height: 100%;
  margin: 0 auto (-$line-height)*12;
  height: auto !important;
  height: 100%;
}

.footer, .push {
  clear: both;
  min-height: $line-height*12;
}

.ie-callout {
  position: absolute;
  top: 0;
  width: 100%;

  a.close {
    font-size: rem-calc(34);
    top: 20%;
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

.menu.simple {
  border-bottom: 1px solid $border;
  margin: $line-height 0;

  li {
    padding-bottom: rem-calc(7);

    a {
      color: $text-medium;
    }

    &.active {
      border-bottom: 2px solid $brand;
      color: $brand;
    }
  }
}

.menu.vertical {
  background: white;
  margin: $line-height 0;
  padding: $line-height;

  li {
    margin-bottom: $line-height;

    a {
      color: $text-medium;
      padding: 0;
    }

    h2 {
      font-size: $base-font-size;
    }

    &.active {
      border-bottom: 2px solid $brand;
      color: $brand;
    }
  }
}

.small {
  font-size: $small-font-size;
}

.relative {
  position: relative;
}

.logo {
  @include logo;
}

.close-button {
  top: $line-height/2;
}

.back, .icon-angle-left {
  clear: both;
  color: $text-medium;
  float: left;
}

.tabs-content {
  border: 0;
}

.tabs {
  border: {
    left: 0;
    right: 0;
    top: 0;
  };
  margin-bottom: $line-height;

  .tabs-title > a {
    color: $text-medium;
    margin-bottom: rem-calc(-1);
    margin-right: $line-height;

    &[aria-selected='true'],
    &.is-active {
      color: $brand;
      border-bottom: 2px solid $brand;
      font-weight: bold;
    }
  }

  h2, h3 {
    font-size: $base-font-size;
  }
}

.no-max-width {
  max-width: none;
}

.button.float-right ~ .button.float-right {
  margin: 0 $line-height/2;
}

.pagination .current {
  background: $brand;
}

// 02. Header
// ----------

header {
  background: $brand;
  border-bottom: 1px solid $border;
  margin-bottom: $line-height;

  .selected {
    border-bottom: 1px solid white;
  }

  .locale {
    float: left;
    height: $line-height*1.5;
    margin-left: $line-height/2;
  }

  .external-links {
    float: none;
    padding: rem-calc(6) 0;
    text-align: center;

    @include breakpoint(medium) {
      float: right;
    }
  }
}

.top-bar {
  background: $brand !important;
  color: white;
  height: $line-height*2;
  line-height: $line-height*2;
  padding-bottom: 0;
  padding-top: 0;

  @include breakpoint(medium) {
    padding: 0;
  }

  .top-bar-title a {
    @include logo;
    line-height: rem-calc(80) !important;

    &:hover {
      text-decoration: none;
    }
  }

  ul {
    background: none;
    padding-right: rem-calc(15);

    &.menu > li {
      display: block;

      @include breakpoint(medium) {
        display: table-cell;
        height: $line-height*3.5;
      }

      a {
        color: white;
        padding-left: 0;

        @include breakpoint(medium) {
          font-size: $small-font-size;
          padding: rem-calc(11) rem-calc(16);
        }

        &.button {
          text-align: left;

          @include breakpoint(medium) {
            background: white;
            color: $brand;
            text-align: center;
          }
        }
      }
    }
  }

  .menu-icon.dark {
    height: 20px;

    &::after, &:hover::after {
      background: white;
      box-shadow: 0 7px 0 white, 0 14px 0 white;
    }
  }
}

.top-links {
  background: $dark;
  color: white;
  font-size: $small-font-size;
  padding-right: $line-height/2;

  a {
    color: white;
    margin: 0 rem-calc(6);

    &:hover {
      text-decoration: underline;
    }
  }

  ul {
    margin-bottom: 0;

    li {
      display: block;
    }

    @include breakpoint(medium) {
      li {
        display: inline-block;

        &:after {
          content: "|";
        }

        &:last-child:after {
          content: none;
        }
      }
    }
  }
}
/* ... */

